第二次提交

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="gome-top-body">
             <!--国美会员 -->
             <div class="vip">
-                <a href="">国美会员</a>123123
+                <a href="">123</a>
                 <i></i>
             </div>
         </div>
