--- a/index.html
+++ b/index.html
@@ -27,8 +27,64 @@
         <div id="gome-top-body">
             <!--国美会员 -->
             <div class="vip">
-                <a href="">国美超市</a>
+                <a href="">国美会员</a>
                 <i></i>
+            </div>
+            <!-- 登录 -->
+            <div class="denglu">
+                <a href="">登录</a>
+            </div>
+            <!-- 注册有礼 -->
+            <div class="zhuce">
+                <a href="">注册有礼</a>
+                <i></i>
+            </div>
+
+            <!-- 头部第一行右边的导航 -->
+            <ul>
+                <li><a href="">我的订单</a></li>
+                <li>
+                    <a href="">我的国美</a>
+                    <i></i>
+                </li>
+                <li>
+                    <a href="">企业采购</a>
+                    <i></i>
+                </li>
+                <li>
+                    <i></i>
+                    <a href="">服务中心</a>
+                    <i></i>
+                </li>
+                <li>
+                    <a href="">网站导航</a>
+                    <i></i>
+                </li>
+                <li>
+                    <i></i>
+                    <a href="">手机国美</a>
+                    <i></i>
+                </li>
+            </ul>
+        </div>
+        <!-- 国美会员划过显示的div -->
+        <div class="hua-vip">
+            <div class="shang">
+                <i></i>
+                <p>欢迎来到国美，
+                    <a href=" ">请登录！</a>
+                </p>
+            </div>
+            <div class="zhong ">
+                <p></p>
+                <p></p>
+            </div>
+            <div class="xia ">
+                <div>a</div>
+                <div>美豆抽奖</div>
+                <div>退换货保障</div>
+                <div>价格保护</div>
+                <div>b</div>
             </div>
         </div>
     </div>
