--- a/index.html
+++ b/index.html
@@ -27,9 +27,31 @@
         <div id="gome-top-body">
             <!--国美会员 -->
             <div class="vip">
-                <a href="">国美会员</a>
-                <i></i>
+                <a href="" class="huiyuan">国美会员</a>
+                <i class="vip-i"></i>
+                <!-- 国美会员划过显示的div -->
+                <div class="hua-vip">
+                    <div class="shang">
+                        <i></i>
+                        <p>欢迎来到国美，
+                            <a href=" ">请登录！</a>
+                        </p>
+                    </div>
+                    <div class="fengexian"></div>
+                    <div class="zhong ">
+                        <p>我的特权</p>
+                        <a href="">会员俱乐部</a>
+                    </div>
+                    <div class="xia ">
+                        <i></i>
+                        <i><span>美豆抽奖</span></i>
+                        <i><span>退换货保证</span></i>
+                        <i><span>价格保护</span></i>
+                        <i></i>
+                    </div>
+                </div>
             </div>
+
             <!-- 登录 -->
             <div class="denglu">
                 <a href="">登录</a>
@@ -42,51 +64,63 @@
 
             <!-- 头部第一行右边的导航 -->
             <ul>
-                <li><a href="">我的订单</a></li>
+                <li><a href=" ">我的订单</a></li>
                 <li>
-                    <a href="">我的国美</a>
+                    <a href=" ">我的国美</a>
+                    <i></i>
+                    <!-- 划过我的国美 -->
+                    <div class="hua-li1">
+                        <div class="yidiv">
+                            <p>
+                                我的国美，
+                                <a href=" " class="oA">请登录！</a>
+                            </p>
+                            <ul>
+                                <li>
+                                    <a href="">待处理订单</a></li>
+                                <li>
+                                    <a href="">我的收藏</a></li>
+                                <li>
+                                    <a href="">个人资料</a></li>
+                                <li>
+                                    <a href="">我的美店</a></li>
+                            </ul>
+                        </div>
+                        <div class="erdiv">
+                            <a href="">我的优惠券</a>
+                        </div>
+                        <div class="sandiv">
+                            <div>
+                                <a href="">足迹</a>
+                            </div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                            <div></div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <a href=" ">企业采购</a>
                     <i></i>
                 </li>
                 <li>
-                    <a href="">企业采购</a>
+                    <i></i>
+                    <a href=" ">服务中心</a>
+                    <i></i>
+                </li>
+                <li>
+                    <a href=" ">网站导航</a>
                     <i></i>
                 </li>
                 <li>
                     <i></i>
-                    <a href="">服务中心</a>
-                    <i></i>
-                </li>
-                <li>
-                    <a href="">网站导航</a>
-                    <i></i>
-                </li>
-                <li>
-                    <i></i>
-                    <a href="">手机国美</a>
+                    <a href=" ">手机国美</a>
                     <i></i>
                 </li>
             </ul>
         </div>
-        <!-- 国美会员划过显示的div -->
-        <div class="hua-vip">
-            <div class="shang">
-                <i></i>
-                <p>欢迎来到国美，
-                    <a href=" ">请登录！</a>
-                </p>
-            </div>
-            <div class="zhong ">
-                <p></p>
-                <p></p>
-            </div>
-            <div class="xia ">
-                <div>a</div>
-                <div>美豆抽奖</div>
-                <div>退换货保障</div>
-                <div>价格保护</div>
-                <div>b</div>
-            </div>
-        </div>
+
     </div>
 </body>
 
