--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         </div>
         <div class="mygome-side">
             <a href="" class="che"></a>
-            <div><a href="">我的购物车<b></b></a></div>
+            <div><a href="gouwuche.html">我的购物车<b></b></a></div>
         </div>
     </div>
     <!-- 第四行 -->
